src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@layer base {
  .dark {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
    --color-1: 0 100% 63%;
    --color-2: 270 100% 63%;
    --color-3: 210 100% 63%;
    --color-4: 195 100% 63%;
    --color-5: 90 100% 63%;
  }
  :root {
    --background: 0 0% 7.06%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
    --color-1: 0 100% 63%;
    --color-2: 270 100% 63%;
    --color-3: 210 100% 63%;
    --color-4: 195 100% 63%;
    --color-5: 90 100% 63%;
    --radius: 0.5rem;
  }
}
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

/* From Uiverse.io by Awadhesh684827 */
[class*="btn-glitch-"] {
  display: inline-block;
  font-family: "VT323", monospace;
  border: 1px solid white;
  color: white;
  padding: 10px 13px;
  min-width: 175px;
  line-height: 1.5em;
  white-space: no-wrap;
  text-transform: uppercase;
  cursor: pointer;
  border-radius: 15px;

  .text,
  .decoration {
    display: inline-block;
  }

  .decoration {
    display: inline-block;
    float: right;
  }

  &:hover,
  &:focus {
    animation-name: glitch;
    animation-duration: 0.2s;
    background-color: yellow;
    color: black;
    border: 1px solid yellow;

    .text-decoration {
      animation-name: blink;
      animation-duration: 0.1s;
      animation-iteration-count: infinite;
    }

    .decoration {
      animation-name: blink;
      animation-duration: 0.1s;
      animation-iteration-count: infinite;
    }
  }

  &:active {
    background: none;
    color: yellow;

    .text-decoration {
      animation-name: none;
    }

    .decoration {
      animation-name: none;
    }

    :before,
    :after {
      display: none;
    }
  }
}

@keyframes glitch {
  25% {
    background-color: red;
    transform: translateX(-10px);
    letter-spacing: 10px;
  }

  35% {
    background-color: green;
    transform: translate(10px);
  }

  59% {
    opacity: 0;
  }

  60% {
    background-color: blue;
    transform: translate(-10px);
    filter: blur(5px);
  }

  100% {
    background-color: yellow;
    blur: (5px);
  }
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

@keyframes shrink {
  100% {
    width: 10%;
  }
}

